@@ -1,7 +1,7 @@
 disabled=false
 bind_addr=
 port=22122
-network_timeout=20
+network_timeout=30
 base_path=/home/yuqing/fastdfs
 max_connections=1024
 
